package com.me.dio.mybank.danilo.santander.dev.week3.domain.model;

import jakarta.persistence.Entity;

@Entity(name = "tb_news")
public class News extends BaseItem {
    
}
